# telemetry-server

./: CMakeLists.txt  LICENSE  README.md  TODO.txt
cmake/: Components.cmake  Dependencies.cmake  Testing.cmake
include/telemetry/: http_server.h  interfaces.h  telemetry_processor.h  telemetry_storage.h
lib/: CMakeLists.txt
lib/core/: telemetry_processor.cpp  telemetry_storage.cpp
lib/http/: http_server.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  http_server_tests.cpp  telemetry_tests.cpp
